<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentCalculadura"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    android:orientation="vertical"
    tools:context=".CalculadoraFragment">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/expressao"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:ellipsize="start"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:gravity="end"
        android:inputType="none"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/purple_700"
        android:textIsSelectable="true"
        android:textSize="35sp" />


    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="25dp"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:text=""
        android:textColor="@color/purple_700"
        android:textSize="30sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/purple_500" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="0.6"
        android:orientation="horizontal">

        <Button
            android:id="@+id/apagarTudo"
            style="@style/Operators_Button"
            android:text="@string/apagarTudo" />


        <ImageView
            android:id="@+id/apagar"
            style="@style/Numeric_Button"
            android:background="@android:color/transparent"
            android:scaleType="center"
            android:src="@drawable/backspace" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <Button
            android:id="@+id/numeroSete"
            style="@style/Numeric_Button"
            android:background="@drawable/botao_normal"
            android:backgroundTintMode="src_over"
            android:text="@string/numero7"
            android:textColor="@color/light_purple"
            app:rippleColor="@color/light_purple"
            app:strokeColor="@color/purple_700" />


        <Button
            android:id="@+id/numeroOito"
            style="@style/Numeric_Button"
            android:text="@string/numero8" />


        <Button
            android:id="@+id/numeroNove"
            style="@style/Numeric_Button"
            android:text="@string/numero9" />

        <Button
            android:id="@+id/somar"
            style="@style/Operators_Button"
            android:text="@string/soma" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <Button
            android:id="@+id/numeroQuatro"
            style="@style/Numeric_Button"
            android:text="@string/numero4" />

        <Button
            android:id="@+id/numeroCinco"
            style="@style/Numeric_Button"
            android:text="@string/numero5" />

        <Button
            android:id="@+id/numeroSeis"
            style="@style/Numeric_Button"
            android:text="@string/numero6" />

        <Button
            android:id="@+id/subtrair"
            style="@style/Operators_Button"
            android:text="@string/subtracao" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">


        <Button
            android:id="@+id/numeroUm"
            style="@style/Numeric_Button"
            android:text="@string/numero1" />


        <Button
            android:id="@+id/numeroDois"
            style="@style/Numeric_Button"
            android:text="@string/numero2" />


        <Button
            android:id="@+id/numeroTres"
            style="@style/Numeric_Button"
            android:text="@string/numero3" />

        <Button
            android:id="@+id/dividir"
            style="@style/Operators_Button"
            android:text="@string/divisao" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="58dp">

        <Button
            android:id="@+id/ponto"
            style="@style/Numeric_Button"
            android:text="@string/ponto" />

        <Button
            android:id="@+id/numeroZero"
            style="@style/Numeric_Button"
            android:text="@string/numero0" />

        <Button
            android:id="@+id/virgula"
            style="@style/Numeric_Button"
            android:text="@string/virgula" />

        <Button
            android:id="@+id/multiplicar"
            style="@style/Operators_Button"
            android:text="@string/multiplicacao" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="0.6"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="58dp">


        <Button
            android:id="@+id/igual"
            style="@style/Result_Button"
            android:text="@string/igual" />


    </LinearLayout>


</LinearLayout>